<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.hab.studyspace.AddSpaceActivity"
    tools:showIn="@layout/activity_add_space">

    <TextView
        android:id="@+id/new_name_label"
        android:text="@string/label_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        />

    <EditText
        android:id="@+id/new_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/label_name"
        android:layout_below="@+id/new_name_label"
        android:layout_marginBottom="@dimen/edit_text_margin"
        />

    <TextView
        android:id="@+id/new_details_label"
        android:text="@string/label_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_name" />

    <EditText
        android:id="@+id/new_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_details"
        android:layout_below="@+id/new_details_label"
        android:layout_marginBottom="@dimen/edit_text_margin"
        />

    <TextView
        android:id="@+id/new_start_label"
        android:text="@string/label_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_below="@+id/new_details"
        android:layout_alignTop="@+id/new_start"
        android:layout_alignBottom="@+id/new_start"
        android:padding="@dimen/time_label_padding"
        />

    <EditText
        android:id="@+id/new_start"
        android:text="@string/default_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/time_font_size"
        android:layout_below="@+id/new_details"
        android:layout_toRightOf="@+id/new_start_label"
        android:layout_toEndOf="@+id/new_start_label">
    </EditText>

    <TextView
        android:id="@+id/new_end_label"
        android:text="@string/label_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_alignTop="@+id/new_end"
        android:layout_alignBottom="@+id/new_end"
        android:layout_below="@+id/new_start_label"
        android:padding="@dimen/time_label_padding"/>

    <EditText
        android:id="@+id/new_end"
        android:text="@string/default_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/time_font_size"
        android:layout_below="@+id/new_start_label"
        android:layout_toRightOf="@+id/new_end_label"
        android:layout_toEndOf="@+id/new_end_label">
    </EditText>

    <Button
        android:id="@+id/addSpace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_space"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
